--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW50aW1hdGUtYm94ZXItMjguY2xlcmsuYWNjb3VudHMuZGV2JA
+DATABASE_URL="postgres://postgres.zkyxuolwscrlyipnhbvi:EOYKYQ1krQ5zpSnE@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require&supa=base-pooler.x"
+
