--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,6 +18,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.6",
     "@expo/vector-icons": "^14.0.4",
+    "@prisma/client": "^6.5.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.41",
@@ -52,6 +54,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "prisma": "^6.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
